# qt-cmake-template

./: .gitignore  CMakeLists.txt  LICENCE  Licence.rtf  Licence.txt  README.md
scripts/: clean-source  prepare-build  template-helpers.rb
scripts/template-snippets/: directory.txt.erb  test-directory.txt.erb
source/: CMakeLists.txt  CMakeLists.txt.erb  defines.h.cmake  main.cpp  main_window.cpp  main_window.h  main_window.ui
tests/: CMakeLists.txt  CMakeLists.txt.erb  defines.h.cmake  example_tests.cpp.example
win/: CMakeLists.txt  installer.cmake.nsi  installer.cmake.wxs  installer.nsi.cmake  installer.wxs
